<resources>
    <string name="app_name">Tetriste</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="new_game_button_text">Nouveau jeu</string>
    <string name="new_game_solo_button_text">Nouveau jeu solo</string>
    <string name="high_scores_button_text">High scores</string>
    <string name="about_button_text">A propos</string>
    <string name="high_scores_string">High Scores</string>
    <string name="about_string">A propos</string>
    <string name="game_score_string">Points: 0</string>
    <string name="game_malus_count">Malus: 0</string>
    <string name="welcome_string">Bienvenue,</string>
    <string name="settings_button_text">Paramètres</string>
    <string name="set_properties_highscores_button_text">High Scores filters</string>
    <string name="game_over_textview_string">GAME OVER</string>
    <string name="game_over_textview_string2">Rejouer</string>
    <string name="developers_string">Développeurs:</string>

    <string name="developer1_string">Fuzier Antoine</string>
    <string name="developer2_string">Gouesnard Raphaël</string>
    <string name="developer3_string">Salim Cherifi</string>

    <string name="instructions_string">Instructions:</string>
    <string name="gesture1_string">Swipe Up</string>
    <string name="gesture2_string">Swipe Gauche</string>
    <string name="gesture3_string">Swipe Droit</string>
    <string name="gesture4_string">Swipe Bas</string>
    <string name="gesture5_string">Taper du coté gauche</string>
    <string name="gesture6_string">Taper du coté droit</string>
    <string name="gestureeffect1_string">Pause/Reprendre</string>
    <string name="gestureeffect2_string">Bouger à gauche</string>
    <string name="gestureeffect3_string">Bouger à droite</string>
    <string name="gestureeffect4_string">Lacher la pièce</string>
    <string name="gestureeffect5_string">Rotation gauche</string>
    <string name="gestureeffect6_string">Rotation droite</string>
</resources>
