<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nebula"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/game_information"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="7dp"
        android:orientation="vertical" />



    <TextView
        android:id="@+id/game_over_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#ff2b2b2b"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_over_textview_string"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/game_over_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_over_textview"
        android:layout_centerInParent="true"
        android:background="#ff2b2b2b"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_over_textview_string2"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/game_information"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/game_score_textview"
            android:layout_width="95dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:clickable="false"
            android:longClickable="false"
            android:text="@string/game_score_string"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/game_malus_count"
            android:layout_width="95dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:clickable="false"
            android:longClickable="false"
            android:text="@string/game_malus_count"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.829" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
